# banking-widget

./: README.md  pyproject.toml
src/: main.py  masks.py  processing.py  widget.py
tests/: conftest.py  test_masks.py  test_processing.py  test_widget.py
